issue/252: added _alignIconRight

--- a/less/quicknav.less
+++ b/less/quicknav.less
@@ -11,9 +11,10 @@
         padding: 20px;
         vertical-align: top;
         
-        &.icon {
+        .icon {
             color: @button-text-color;
             display: inline-block;
+            vertical-align: top;
 
             &:before {
                 line-height: 1;
@@ -36,7 +37,6 @@
             font-family: @font-family;
             line-height: 135%;
             min-width: 24px;
-            vertical-align: text-bottom;
 
             @media all and (max-width: @device-width-small) {
                 line-height: 24px;
